fix(headless-styles): prevent pagination text from wrapping

--- a/packages/headless-styles/src/components/Pagination/paginationCSS.module.css
+++ b/packages/headless-styles/src/components/Pagination/paginationCSS.module.css
@@ -47,6 +47,7 @@
 
 .paginationText {
   color: var(--ps-text-medium);
+  white-space: nowrap;
 }
 
 .paginationText > strong {
